Ajuste final, removendo arquivos não usados.

--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -2258,6 +2258,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Análise: </b>O gráfico mostra os dados de um determinado professor lecionando uma disciplina especifica. Da para notar que as aprovações diminuíram consideravelmente, juntamente com a média das notas da turma, a partir de 2016, levando a reflexão do porquê disso ter acontecido. Um ponto interessante é que mesmo havendo muitas reprovações a avaliação do docente continuou com uma média boa, levando a crer que o professor continuou ensinando bem e apenas os alunos diminuíram seu rendimento. Outro ponto é que em 2016.2 por exemplo, o percentual de aprovados aumentou e mesmo assim as avaliações dos docentes tiveram uma leve queda, sendo difícil de encontrar uma co-relação entre essas informações."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Análise secundária e mais geral"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 103,
    "metadata": {},
@@ -2279,13 +2293,6 @@
     "a = a[a.id_docente != 5756386].sort_values(['ano', 'periodo'])\n",
     "\n",
     "showGrafic(a)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Análise secundária e mais geral"
    ]
   },
   {
